public class Case {
    int x;
    int y;
    private Character persona;

    public Case(int x, int y, Character persona) {
        this.x = x;
        this.y = y;
        this.persona = persona;
    }

    public Character getPersona() {
        return persona;
    }

    public void setPersona(Character persona) {
        this.persona = persona;
    }

    ;

    public int getX() {
        return this.x;
    }

    public int getY() {
        return this.y;
    }


    public void visualization() {
    }
}
