

public class Mage extends Character {
    public Mage() {

    }

    public Mage(Case currentposition, boolean numplayer) {

        super(5, 4, 7, 15, currentposition, numplayer);

    }
}
