public class Warrior extends Character {

    public Warrior() {
    }

    public Warrior(Case currentposition, boolean numplayer) {

        super(10, 10, 10, 10, currentposition, numplayer);
    }

}
